--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,10 @@
             <artifactId>jol-core</artifactId>
             <version>0.9</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.12</version>
+        </dependency>
     </dependencies>
-
 </project>
