--- a/pom.xml
+++ b/pom.xml
@@ -33,5 +33,10 @@
             <artifactId>springboot-starter-netty</artifactId>
             <version>0.2.1</version>
         </dependency>
+        <dependency>
+            <groupId>dom4j</groupId>
+            <artifactId>dom4j</artifactId>
+            <version>1.6.1</version>
+        </dependency>
     </dependencies>
 </project>
