--- a/pom.xml
+++ b/pom.xml
@@ -38,5 +38,23 @@
             <artifactId>dom4j</artifactId>
             <version>1.6.1</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.jdom/jdom -->
+        <dependency>
+            <groupId>org.jdom</groupId>
+            <artifactId>jdom</artifactId>
+            <version>1.1</version>
+        </dependency>
+        <dependency>
+            <groupId>net.sf.json-lib</groupId>
+            <artifactId>json-lib</artifactId>
+            <version>2.4</version>
+            <classifier>jdk15</classifier>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/nu.xom/com.springsource.nu.xom -->
+        <dependency>
+            <groupId>nu.xom</groupId>
+            <artifactId>com.springsource.nu.xom</artifactId>
+            <version>1.1.0</version>
+        </dependency>
     </dependencies>
 </project>
